examples/pass/errorMain3.c
int main(){}
    print("no deberia imprimir esto, errorMain3");
}