examples/error/fueraMain1.c
print("no deberia imprimir esto, fueraMain1");
int main(){
   return 0;
}
